[metadata]
name = bflmpsvz
author = Jan Vlcinsky
author-email = jan.vlcinsky@gmail.com
summary = Stub package to test multiple pypi accounts updating it
description-file = 
	README.rst
classifier = 
    Development Status :: 3 - Alpha
	Programming Language :: Python :: 2.7
[files]
modules = 
	bflmpsvz
[entry_points]
console_scripts = 
	bflmpsvz = bflmpsvz:script
